# esp-idf-template

cargo/: Cargo.toml  cargo-generate.toml  rust-toolchain.toml
cargo/.cargo/: config.toml
