cargo-features = ["strip"]

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[profile.release]
opt-level = "s"
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]
default = ["esp-idf-sys/native"]

[dependencies]
{% if std %}esp-idf-sys = { version = "^0.30", features = ["binstart"] }
{% else %}log = { version = "^0.4", default-features = false }
esp-idf-sys = { version = "^0.30", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "^0.36", default-features = false, features = ["alloc"] }{% endif %}

[build-dependencies]
embuild = "^0.28"
anyhow = "^1"
